assets/css/Style.css
---
layout: Stylesheet
---

@import "/assets/css/highlight.css";
/*@import "/assets/css/theme.css"; leaving out for now, will tinker w/color switcher later...*/
/* Containers: Body, Container, Box, Main, Header, Content */


@font-face {
   font-family: 'Heldane';
   src: url('../fonts/heldane-display-regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
}

@font-face {
   font-family: 'Heldane';
   src: url('../fonts/HeldaneTextWeb-RegularItalic.woff2') format('woff2');
   font-weight: 400;
   font-style: italic;
   font-display: swap;
}

@font-face {
   font-family: 'Heldane';
   src: url('../fonts/heldane-display-medium.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
}

@font-face {
   font-family: 'Heldane';
   src: url('../fonts/heldane-display-bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
}

@font-face {
   font-family: 'Favorit';
   src: url('../fonts/Favorit-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
}

@font-face {
   font-family: 'Favorit';
   src: url('../fonts/FavoritProMedium.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
}

@font-face {
   font-family: 'Favorit';
   src: url('../fonts/Favorit-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
}

@font-face {
   font-family: 'FavoritMono';
   src: url('../fonts/FavoritMonoStd-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
}

/*light/dark mode colors*/

html, html[data-theme="light"] { 
	--c-bg: #f5f3ef;
	--c-accent: #946e24;
	--c-text: #1c1c1c;
	--c-text-muted: #555555;
	--c-text-strong: #1c1c1c;
	--c-text-link: #6b501a;
	--c-border: rgba(128, 116, 107, 0.3);
	--c-border-light: rgba(128, 116, 107, 0.1);
	--c-btn-bg: #e0d5c0;
	--c-btn-alt-bg: #f5f3ef;
	--c-card-bg: #e0d5c0;
	--c-card-bg-light: rgba(224, 213, 192, 0.4);
	--c-card-border: #8e7546;
	--c-card-border-light: #bea77c;
	--c-card-text: #1c1c1c;
	--c-card-text-muted: #2d2825;
	--c-card-text-link: #1c1c1c;
	--c-bright-1: #cfae70;
	--c-bright-2: #946e24;
	--c-topper-split-bg: #e0d5c0;
	--c-gradient-fade: linear-gradient(90deg, rgba(245, 243, 239, 0) 0%, rgba(245, 243, 239, 0.75) 50%, #f5f3ef 100%);
	--c-gradient-fade-vert: linear-gradient(180deg, rgba(245, 243, 239, 0) 0%, rgba(245, 243, 239, 0.75) 50%, #f5f3ef 100%)
}

html[data-theme="dark"] {
	--c-bg: #1c1c1c;
	--c-accent: #cfae70;
	--c-text: #e0d5c0;
	--c-text-muted: #998e85;
	--c-text-strong: #ffffff;
	--c-text-link: #ffffff;
	--c-border: rgba(255, 255, 255, 0.3);
	--c-border-light: rgba(255, 255, 255, 0.05);
	--c-btn-bg: rgba(224, 213, 192, 0.2);
	--c-btn-alt-bg: rgba(224, 213, 192, 0.2);
	--c-card-bg: #f5f3ef;
	--c-card-bg-light: rgba(245, 243, 239, 0.1);
	--c-card-border: #e0d5c0;
	--c-card-border-light: rgba(224, 213, 192, 0.75);
	--c-card-text: #555555;
	--c-card-text-muted: #666666;
	--c-card-text-link: #1c1c1c;
	--c-bright-1: #86227b;
	--c-bright-2: #e05968;
	--c-topper-split-bg: #000000;
	--c-gradient-fade: linear-gradient(90deg, rgba(28, 28, 28, 0) 0%, rgba(28, 28, 28, 0.75) 50%, #1c1c1c 100%);
	--c-gradient-fade-vert: linear-gradient(180deg, rgba(28, 28, 28, 0) 0%, rgba(28, 28, 28, 0.75) 50%, #1c1c1c 100%)
	}

@media (prefers-color-scheme: dark) {
	html, html[data-theme="dark"] {
	--c-bg: #1c1c1c;
	--c-accent: #cfae70;
	--c-text: #e0d5c0;
	--c-text-muted: #998e85;
	--c-text-strong: #ffffff;
	--c-text-link: #ffffff;
	--c-border: rgba(255, 255, 255, 0.3);
	--c-border-light: rgba(255, 255, 255, 0.05);
	--c-btn-bg: rgba(224, 213, 192, 0.2);
	--c-btn-alt-bg: rgba(224, 213, 192, 0.2);
	--c-card-bg: #f5f3ef;
	--c-card-bg-light: rgba(245, 243, 239, 0.1);
	--c-card-border: #e0d5c0;
	--c-card-border-light: rgba(224, 213, 192, 0.75);
	--c-card-text: #555555;
	--c-card-text-muted: #666666;
	--c-card-text-link: #1c1c1c;
	--c-bright-1: #86227b;
	--c-bright-2: #e05968;
	--c-topper-split-bg: #000000;
	--c-gradient-fade: linear-gradient(90deg, rgba(28, 28, 28, 0) 0%, rgba(28, 28, 28, 0.75) 50%, #1c1c1c 100%);
	--c-gradient-fade-vert: linear-gradient(180deg, rgba(28, 28, 28, 0) 0%, rgba(28, 28, 28, 0.75) 50%, #1c1c1c 100%)
	}
	
	html[data-theme="light"] { 
	--c-bg: #f5f3ef;
	--c-accent: #946e24;
	--c-text: #1c1c1c;
	--c-text-muted: #555555;
	--c-text-strong: #1c1c1c;
	--c-text-link: #6b501a;
	--c-border: rgba(128, 116, 107, 0.3);
	--c-border-light: rgba(128, 116, 107, 0.1);
	--c-btn-bg: #e0d5c0;
	--c-btn-alt-bg: #f5f3ef;
	--c-card-bg: #e0d5c0;
	--c-card-bg-light: rgba(224, 213, 192, 0.4);
	--c-card-border: #8e7546;
	--c-card-border-light: #bea77c;
	--c-card-text: #1c1c1c;
	--c-card-text-muted: #2d2825;
	--c-card-text-link: #1c1c1c;
	--c-bright-1: #cfae70;
	--c-bright-2: #946e24;
	--c-topper-split-bg: #e0d5c0;
	--c-gradient-fade: linear-gradient(90deg, rgba(245, 243, 239, 0) 0%, rgba(245, 243, 239, 0.75) 50%, #f5f3ef 100%);
	--c-gradient-fade-vert: linear-gradient(180deg, rgba(245, 243, 239, 0) 0%, rgba(245, 243, 239, 0.75) 50%, #f5f3ef 100%)
	}
}
/* ... */

